--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,7 +1,7 @@
-<section class="header-section">
+<header class="header-section">
     <div class="d-flex align-center">
         <div class="logo">
-            <a href="{{route}}">DocumentGPT</a>
+            <a href="{{route}}">LibraryGPT</a>
         </div>
     </div>
 
@@ -98,4 +98,4 @@
             }
         }
     </style>
-</section>
+</header>
