--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DocumentGPT</title>
+    <title>LibraryGPT</title>
     
     <!-- stylesheets -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/bootstrap-grid.min.css') }}">
@@ -93,27 +93,31 @@
                         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M120-120v-320h80v184l504-504H520v-80h320v320h-80v-184L256-200h184v80H120Z"/></svg>
                     </button>
                 </div>
-                <div class="chat-message-wrapper d-none" id="chat-zone">
+                <div class="chat-message-wrapper d-none card-slider" id="chat-zone">
                 </div>
                 <div class="start-chat-message-wrapper upload-box" id="drop-zone">
                     <!-- <span>Drag and drop your PDF file or upload manually then start a conversation!</span> -->
                     <span>Drag and drop your PDF file or upload manually then start a conversation!</span>   
                 </div>
-                <div class="chat-footer">
-                    <div class="file-list" id="file-list">
-                        <svg id="attachment-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M720-330q0 104-73 177T470-80q-104 0-177-73t-73-177v-370q0-75 52.5-127.5T400-880q75 0 127.5 52.5T580-700v350q0 46-32 78t-78 32q-46 0-78-32t-32-78v-370h80v370q0 13 8.5 21.5T470-320q13 0 21.5-8.5T500-350v-350q-1-42-29.5-71T400-800q-42 0-71 29t-29 71v370q-1 71 49 120.5T470-160q70 0 119-49.5T640-330v-390h80v390Z"/></svg>
+                
+                <div class="chat-footer" id="chat-footer">
+                        <div class="chat-footer-box">
+                            <div class="file-list" id="file-list">
+                                <svg id="attachment-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M720-330q0 104-73 177T470-80q-104 0-177-73t-73-177v-370q0-75 52.5-127.5T400-880q75 0 127.5 52.5T580-700v350q0 46-32 78t-78 32q-46 0-78-32t-32-78v-370h80v370q0 13 8.5 21.5T470-320q13 0 21.5-8.5T500-350v-350q-1-42-29.5-71T400-800q-42 0-71 29t-29 71v370q-1 71 49 120.5T470-160q70 0 119-49.5T640-330v-390h80v390Z"/></svg>
+                            </div>
+                            <span class="chat-footer-wrapper">
+                                <!-- <input class="input-text" type="text" placeholder="Type a message to start chatting..."> -->
+                                <textarea id="chat-input-text" class="input-text card-slider" rows="1" cols="50" placeholder="Start chatting" oninput="resizeTextarea(this)"></textarea>
+                                <button class="upload-button" id="upload-button">
+                                    <input type="file" id="file-input" class="hidden-input" accept="application/pdf" multiple>
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M440-320v-326L336-542l-56-58 200-200 200 200-56 58-104-104v326h-80ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z"/></svg>
+                                </button>
+                                <button onclick="sendMessage()">
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M120-160v-640l760 320-760 320Zm80-120 474-200-474-200v140l240 60-240 60v140Zm0 0v-400 400Z"/></svg>
+                                </button>
+                            </span>
                     </div>
-                    <span class="chat-footer-wrapper">
-                        <!-- <input class="input-text" type="text" placeholder="Type a message to start chatting..."> -->
-                        <textarea id="chat-input-text" class="input-text" rows="1" cols="50" placeholder="Type a message to start chatting..." oninput="resizeTextarea(this)"></textarea>
-                        <button class="upload-button" id="upload-button">
-                            <input type="file" id="file-input" class="hidden-input" accept="application/pdf" multiple>
-                            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M440-320v-326L336-542l-56-58 200-200 200 200-56 58-104-104v326h-80ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z"/></svg>
-                        </button>
-                        <button onclick="sendMessage()">
-                            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M120-160v-640l760 320-760 320Zm80-120 474-200-474-200v140l240 60-240 60v140Zm0 0v-400 400Z"/></svg>
-                        </button>
-                    </span>
+                    
                 </div>
 
             </div>
